# mailbox-service

./: .dockerignore  .env.development.example  .env.example  .env.production.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  package-lock.json  pyproject.toml
deploy/: Caddyfile
docs/: external-mailboxes-acquire-integration.md  smsbower-gmail-phase1a.md
frontend/: index.html  package-lock.json  package.json
mailbox_service/: __init__.py  access_token_scopes.py  audit_service.py  capability_probe_service.py  client_key_service.py  config.py  database.py  lease_service.py  mail_body_sanitize.py  mail_message_normalize.py  mailbox_admin_service.py  main.py  migration_runner.py  models.py  operation_deadline.py  operator_session_service.py  provider_health_service.py  provider_operation_service.py  provider_settings_service.py  proxy_scheduler.py  proxy_service.py  scheduler_lease_repository.py  schemas.py  security.py  token_keepalive_scheduler.py  token_repository.py  token_service.py  transaction_retry.py  verification_authorization.py  verification_code_matcher.py  verification_code_service.py  verification_poll_capacity.py
migrations/: 001_create_proxy_routing.sql  002_add_mailbox_credential_columns.sql  003_add_mailbox_access_token_cache.sql  004_create_client_keys.sql  005_add_mailbox_scope.sql  006_add_mailbox_capability.sql  007_proxy_endpoint_includes_credentials.sql  008_add_lease_allocated_email.sql  009_add_email_site_usages.sql  010_add_mailbox_refresh_token_lifetime.sql  011_add_token_refresh_claims.sql  012_add_mailbox_lease_claims.sql  013_add_scheduler_and_proxy_observations.sql  014_add_mailbox_provider_bindings.sql  016_create_provider_operations.sql  (+6 more)
(+69 files in other folders)
