[project]
name = "mailbox-service"
version = "0.1.0"
description = "Outlook and Hotmail credential service with sticky egress proxy routing"
requires-python = ">=3.11"
dependencies = [
  "apscheduler",
  "cryptography",
  "email-validator",
  "fastapi",
  "httpx[socks]",
  "pydantic-settings",
  "pymysql",
  "PySocks",
  "sqlalchemy",
  "uvicorn[standard]",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mailbox_service*"]
