[project]
name = "mailbox-service"
version = "0.1.0"
description = "Outlook and Hotmail credential service with sticky egress proxy routing"
requires-python = ">=3.14"
dependencies = [
  "apscheduler",
  "cryptography",
  "email-validator",
  "fastapi",
  "httpx[socks]",
  "pydantic-settings",
  "pymysql",
  "PySocks",
  "sqlalchemy",
  "uvicorn[standard]",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
  "mysql: tests that require a real MySQL 8 database",
  "stress: long-running concurrency or load tests",
  "container: container and TLS smoke tests",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mailbox_service*"]
